--- a/CaseTudy.html
+++ b/CaseTudy.html
@@ -10,8 +10,10 @@
 <body onkeydown="moveMan(event)">
 <canvas id="myCanvas" width="1200" height="550"></canvas>
 <script src="Hero.js"></script>
-<script src="GameBoard.js"></script>
+<script src="Object.js"></script>
+
 <script src="main.js"></script>
+<script src="GameBoard.js"></script>
 
 
 
