--- a/CaseTudy.html
+++ b/CaseTudy.html
@@ -11,7 +11,7 @@
 <canvas id="myCanvas" width="1200" height="550"></canvas>
 <script src="Hero.js"></script>
 <script src="Object.js"></script>
-
+<script src="Princess.js"></script>
 <script src="main.js"></script>
 <script src="GameBoard.js"></script>
 
