--- a/CaseTudy.html
+++ b/CaseTudy.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Game Giải Cứu</title>
-
-
-
 </head>
 <body onkeydown="moveMan(event)">
+
 <canvas id="myCanvas" width="1200" height="550"></canvas>
+<audio id="myAudio" src="./audio/game.mp3"></audio>
+
+
 <script src="Hero.js"></script>
 <script src="Object.js"></script>
 <script src="Princess.js"></script>
