--- a/CaseTudy.html
+++ b/CaseTudy.html
@@ -6,11 +6,11 @@
 </head>
 <body onkeydown="moveMan(event)">
 
-<canvas id="myCanvas" width="1200" height="550"></canvas>
+<canvas id="myCanvas" width="1100" height="550"></canvas>
 <audio id="myAudio" src="./audio/game.mp3"></audio>
 
 
-<script src="Hero.js"></script>
+<script src="Man.js"></script>
 <script src="Object.js"></script>
 <script src="Princess.js"></script>
 <script src="main.js"></script>
