--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <title>Game Giải Cứu</title>
     <style>
@@ -11,6 +12,11 @@
         section {
             display: inline-block;
             vertical-align: top;
+        }
+        section button {
+            width: 65px; height: 35px;
+            background-color: #ffb1a3;
+            border-radius: 7px;
         }
 
 
@@ -46,6 +52,7 @@
 <script src="Princess.js"></script>
 <script src="main.js"></script>
 <script src="GameBoard.js"></script>
+
 
 
 </body>
