--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <button onclick="playGame()" type="button">PLAY</button>
     <button onclick="reset()" type="button">RESET</button>
     <hr>
-    <h4><span style="size: 20px; color: coral">- Dùng phím mỗi tên để di chuyển chú ngựa né tránh virus tìm đường giải cứu công chúa trong ngục.</span>
+    <h4><span style="size: 20px; color: coral">- Dùng phím mũi tên để di chuyển chú ngựa né tránh virus tìm đường giải cứu công chúa trong ngục.</span>
     </h4>
     <h4><span style="size: 20px; color: coral">- Ăn tiền vàng để tăng point</span></h4>
 
